# src/api/models.ts
@@ -1,6 +1,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { BulkUpdateTransactionRequest } from './models/bulk-update-transaction-request';
 export type { CategoryResource } from './models/category-resource';
 export type { DocumentResource } from './models/document-resource';
 export type { DocumentStatus } from './models/document-status';
