# src/api/models/bulk-update-transaction-request.ts
@@ -1,0 +1,13 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface BulkUpdateTransactionRequest {
+  transactions: Array<{
+'id': number;
+'name': string;
+'description'?: (string | null);
+'date': string;
+'value': number;
+'category_id': number;
+}>;
+}
